добавлен рефреш-токен, свагер описание методов и ошибок, маппинг